fix: redirect modal overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,9 @@
   --background: #ffffff;
   --foreground: #171717;
 }
+:root:has(.no_scroll) {
+  overflow: hidden;
+}
 
 @theme inline {
   --color-background: var(--background);
